Bug 331474 - Closing multiple task warning cannot be enabled again
Summary: Closing multiple task warning cannot be enabled again
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-24 22:14 UTC by Volkan
Modified: 2014-04-03 13:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volkan 2014-02-24 22:14:11 UTC
Previously it was possible to get a warning if multiple tabs are about to be closed, but after checking the box "Dont show again", I cannot see this warning anymore.

Reproducible: Always

Steps to Reproduce:
1. Open multiple tabs in Konsole
2. Use the X to close all at once
3. Check "Dont show again" when prompted.
Actual Results:  
This warning cannot be enabled again.

Expected Results:  
There should be a reset setting in Configuration window.
Comment 1 Kurt Hindenburg 2014-02-25 14:51:16 UTC
Git commit 5a386ad591cbaabd1f15d02186982c579a52bd39 by Kurt Hindenburg.
Committed on 25/02/2014 at 14:48.
Pushed by hindenburg into branch 'master'.

Add a way to allow users to reset the "Don't ask again" dialogs

This adds a push button to the Configure Konsole -> General Settings
Ideally, having a separate page listings all the possible entries
would be better.
FIXED-IN: 2.13

M  +9    -0    src/settings/GeneralSettings.cpp
M  +2    -0    src/settings/GeneralSettings.h
M  +58   -1    src/settings/GeneralSettings.ui

http://commits.kde.org/konsole/5a386ad591cbaabd1f15d02186982c579a52bd39
Comment 2 Kurt Hindenburg 2014-03-05 04:36:52 UTC
Git commit bf40927e32ad455ffbc13cc3be062ccb06a8a819 by Kurt Hindenburg.
Committed on 25/02/2014 at 14:48.
Pushed by hindenburg into branch 'frameworks'.

Add a way to allow users to reset the "Don't ask again" dialogs

This adds a push button to the Configure Konsole -> General Settings
Ideally, having a separate page listings all the possible entries
would be better.
FIXED-IN: 2.13
(cherry picked from commit 5a386ad591cbaabd1f15d02186982c579a52bd39)

M  +9    -0    src/settings/GeneralSettings.cpp
M  +2    -0    src/settings/GeneralSettings.h
M  +58   -1    src/settings/GeneralSettings.ui

http://commits.kde.org/konsole/bf40927e32ad455ffbc13cc3be062ccb06a8a819
Comment 3 Volkan 2014-04-01 20:53:40 UTC
It seems I still cannot get the warnings even though I have the button in Configuration window and clicked on it several times.
Comment 4 Kurt Hindenburg 2014-04-02 03:14:46 UTC
please paste your konsolerc file

It should be under .kde/share/config/konsolerc

Although the .kde may be different depending on your distro

Also what message dialog are you using?
Comment 5 Volkan 2014-04-02 10:49:52 UTC
Konsolerc file:

volkan@kubuntu:~$ cat .kde/share/config/konsolerc 
[$Version]
update_info=konsole.upd:2.9.0-global-options

[Desktop Entry]
DefaultProfile=Shell.profile

[Favorite Profiles]
Favorites=Shell.profile

[MainWindow]
Height 600=485
Height 768=553
State=AAAA/wAAAAD9AAAAAAAAA4kAAAIWAAAABAAAAAQAAAAIAAAACPwAAAAA
ToolBarsMovable=Disabled
Width 1366=905
Width 800=796

[Notification Messages]
:confirmNewSession[$d]

[Open-with settings]
CompletionMode=5
History=dolphin


I did not understand what you mean by message dialog type...
Comment 6 Kurt Hindenburg 2014-04-02 12:48:51 UTC
What program are you running?  For example, I use 'top' to test this.

You won't get a dialog if you are just running shells (bash/zsh/etc).
Comment 7 Volkan 2014-04-02 12:50:26 UTC
It was just a "bash". But in the version of KDE 4.9.x I was getting a warning if multiple tabs are open.

One warning was for the running applications, the other one was for the multiple tab closure.
Comment 8 Kurt Hindenburg 2014-04-02 13:32:50 UTC
For shells, you won't get the popup message - only when running a program in the foreground
Comment 9 Volkan 2014-04-02 13:35:25 UTC
So you say this is not a regression, but an intentional feature.
Comment 10 Kurt Hindenburg 2014-04-02 13:44:36 UTC
Yes, at the time this change went in, it was thought users wouldn't want to be given a warning dialog if they just had their default shells running.
Comment 11 Volkan 2014-04-03 11:31:01 UTC
I see, but I would rather see that dialog with the "dont show checkbox" again. For example, if have have multiple tabs open, closing them without any warning causes the current working directories forgotten and this is really annoying.
Comment 12 Kurt Hindenburg 2014-04-03 13:32:41 UTC
OK, can you enter a wishlist for your request? THere's no need to continue this bug.