Add a way to allow users to reset the "Don't ask again" dialogs

This adds a push button to the Configure Konsole -> General Settings
Ideally, having a separate page listings all the possible entries
would be better.

BUG: 331474
FIXED-IN: 2.13